# SimpleMultiCopy

./: CMakeLists.txt  README.md  copythread.cpp  copythread.h  dragdroplistwidget.cpp  dragdroplistwidget.h  main.cpp  qmainwidget.cpp  qmainwidget.h  qmainwidget.ui  thewidgetitem.cpp  thewidgetitem.h  thewidgetitem.ui
